--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1246">
-	<link rel="stylesheet" type="text/css" href="style.css?2826">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?2052">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8776">
+	<link rel="stylesheet" type="text/css" href="style.css?7987">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?1303">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -92,13 +92,10 @@
 
 
 <!-- bloc-1 -->
-<div class="bloc bgc-black full-width-bloc d-bloc" id="bloc-1">
-	<div class="container ">
+<div class="bloc bgc-black full-width-bloc bloc-fill-screen d-bloc intro-header" id="bloc-1">
+	<div class="container">
 		<div class="row">
 			<div class="col">
-				<h1 class="mg-md h1-1-style text-lg-center none animLoop03 animSpeedLazy tc-white">
-					IMPACT
-				</h1>
 			</div>
 		</div>
 	</div>
@@ -1704,7 +1701,7 @@
 <div class="bloc financials bgc-caribbean-green bloc-fill-screen d-bloc" id="bloc-71">
 	<div class="container">
 		<div class="row">
-			<div class="col">
+			<div class="col-lg-3 offset-lg-0 align-self-end">
 				<span class="empty-column"></span>
 			</div>
 		</div>
@@ -1734,7 +1731,7 @@
 		<div class="row">
 			<div class="col-12 offset-lg-0 order-lg--1 col-lg-12">
 				<p class="mg-clear p-3-style-">
-					<strong>1. Infrastructure<br><br>Sectors and societies must invest in and protect the data infrastructure they rely on. Open data is the foundation of this emerging vital infrastructure.</strong><br>
+					<strong>1. Infrastructure<br><br>Sectors and societies must invest in and protect the data infrastructure they rely on. Open data is the foundation of this emerging vital infrastructure.<br></strong><br><u>WHOLE LIST BELOW!!</u>
 				</p>
 			</div>
 		</div>
@@ -1749,14 +1746,14 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?3281"></script>
-<script src="./js/bootstrap.bundle.min.js?335"></script>
-<script src="./js/blocs.min.js?3820"></script>
+<script src="./js/jquery-3.3.1.min.js?3873"></script>
+<script src="./js/bootstrap.bundle.min.js?7632"></script>
+<script src="./js/blocs.min.js?6786"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?3300"></script>
-<script src="./js/textblock.min.js?4277"></script>
-<script src="./js/textbloc-bric-js.js?9989"></script>
-<script src="./js/scrollFX.js?2288"></script>
+<script src="./js/cocoen.min.js?6130"></script>
+<script src="./js/textblock.min.js?569"></script>
+<script src="./js/textbloc-bric-js.js?7910"></script>
+<script src="./js/scrollFX.js?1689"></script>
 <!-- Additional JS END -->
 
 
