--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7244">
-	<link rel="stylesheet" type="text/css" href="style.css?2172">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?2936">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5509">
+	<link rel="stylesheet" type="text/css" href="style.css?3970">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?8288">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -389,7 +389,7 @@
 					We updated our&nbsp;Data Ethics Canvas…
 				</h1>
 				<p class="p-3-style-">
-					<strong>to help organisations identify and manage ethical issues throughout projects that use data.&nbsp;</strong><br><br><strong>It&rsquo;s now been used by at least&nbsp;</strong><span class="span-bold colour-text-white">80 organisations</span><strong>&nbsp;in&nbsp;</strong><span class="span-bold colour-text-white">57 countries</span><strong><span>&nbsp;and we&rsquo;ve trained over&nbsp;</span></strong><span class="span-bold colour-text-white">130 people</span><strong><span>&nbsp;</span></strong><br>
+					<strong>to help organisations identify and&nbsp;</strong><span class="colour-text-white"><strong>manage ethical issues</strong></span><strong>&nbsp;throughout projects that use data.&nbsp;</strong><br><br><strong>It&rsquo;s now been used by at least&nbsp;</strong><span class="span-bold colour-text-white">80 organisations</span><strong>&nbsp;in&nbsp;</strong><span class="span-bold colour-text-white">57 countries</span><strong><span>&nbsp;and we&rsquo;ve trained over&nbsp;</span></strong><span class="span-bold colour-text-white">130 people</span><strong><span>&nbsp;</span></strong><br>
 				</p>
 			</div>
 		</div>
@@ -435,7 +435,7 @@
 					and talked to people to see how they feel
 				</h1>
 				<p class="p-3-style-">
-					<strong>Through a&nbsp;</strong><span class="span-bold colour-text-white text-underline">YouGov survey</span><strong>&nbsp; we explored current attitudes towards the ethical use of personal data. The findings showed that the majority of people feel it is important that data about us is used ethically, but they don&rsquo;t trust most public and private organisations to do so. <br><br>We also continued to engage people in debate through our&nbsp;</strong><span class="span-bold colour-text-white text-underline">Data as Culture&nbsp;</span><strong>art&nbsp;programme and the&nbsp;</strong><span class="span-bold colour-text-white text-underline">Data Stories project</span><strong>&nbsp;with the University of Southampton.&nbsp;&nbsp;</strong><br>
+					<strong>Through a&nbsp;</strong><span class="span-bold colour-text-white text-underline">YouGov survey</span><strong>&nbsp; we explored current attitudes towards the&nbsp;</strong><span class="colour-text-white"><strong>ethical use of personal data</strong></span><strong>&nbsp; The findings showed that the majority of people feel it is important that data about us is used ethically, but they don&rsquo;t trust most public and private organisations to do so. <br><br>We also continued to engage people in debate through our&nbsp;</strong><span class="span-bold colour-text-white text-underline">Data as Culture&nbsp;</span><strong>art&nbsp;programme and the&nbsp;</strong><span class="span-bold colour-text-white text-underline">Data Stories project</span><strong>&nbsp;with the University of Southampton.&nbsp;&nbsp;</strong><br>
 				</p>
 			</div>
 		</div>
@@ -599,7 +599,7 @@
 		<div class="row">
 			<div class="col-12 margin-top col-lg-10 offset-lg-1">
 				<h2 class="tc-white btn-resize-mode d-block mg-md-sm text-sm-left mg-lg margin-bottom h1-med-comp">
-					Data trusts was one data access model we explored in detail<br>
+					<span class="colour-text-acid">Data trusts</span>&nbsp;was one data access model we explored in detail<br>
 				</h2>
 				<p class="p-margin-top btn-resize-mode d-block mg-clear">
 					<strong>Through our R&amp;D programme and through dedicated funding from the UK&rsquo;s&nbsp;<span class="colour-text-white text-underline span-bold">Office for AI</span>&nbsp; we&rsquo;ve been exploring how data institutions, in particular data trusts, could help to&nbsp;<span class="colour-text-white span-bold">increase data sharing while retaining trust</span>&nbsp;from both people and organisations.&nbsp;<a class="read-more-white ltc-pear span-bold" href="#" id="read-more-data-trusts" data-toggle-visibility="read-more-data-trusts,detail-data-trusts">Read more…</a></strong><br>
@@ -662,11 +662,11 @@
 <!-- Bloc Group END -->
 
 <!-- quote-data-trusts -->
-<div class="bloc bgc-palatinate-blue tc-pear d-bloc" id="quote-data-trusts">
+<div class="bloc bgc-palatinate-blue tc-pear" id="quote-data-trusts">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-4">
-				<h6 class="mg-md h6-1-style mg-clear-md float-md-none text-center mg-lg-xs mg-lg-sm text-md-left text-sm-left tc-pear">
+				<h6 class="mg-md h6-1-style mg-clear-md float-md-none text-center mg-lg-xs mg-lg-sm text-md-left text-sm-left tc-white">
 					<strong>Belinda Clarke</strong>, Director,<br><u>Agri-Tech East</u><br>
 				</h6>
 			</div>
@@ -674,7 +674,7 @@
 				<img src="img/lazyload-ph.png" data-src="img/placeholder-user.png" class="img-fluid rounded-circle mx-auto d-block img-style mg-md lazyload" alt="placeholder user" />
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4">
-				<h6 class="mg-md float-lg-right h6-style text-lg-right text-md-right mg-clear-md float-md-right text-center mg-lg-xs mg-lg-sm text-sm-right tc-pear">
+				<h6 class="mg-md float-lg-right h6-style text-lg-right text-md-right mg-clear-md float-md-right text-center mg-lg-xs mg-lg-sm text-sm-right tc-white">
 					an ODI Member
 				</h6>
 			</div>
@@ -728,7 +728,7 @@
 			</div>
 			<div class="col-md-6 align-self-start col-lg-10 offset-lg-1">
 				<h1 class="mg-lg tc-neon-fuchsia h1-med-comp">
-					We created a toolkit for using data in public services…
+					We created&nbsp;<span class="colour-text-white">a toolkit</span>&nbsp;for using data in public services…
 				</h1>
 				<p class="mg-clear p-3-style-">
 					We worked with local authorities across the UK to find and showcase data-enabled innovation in local public services. We funded four projects using open geospatial data to improve mobility, poverty and inequality.&nbsp;<a class="read-more-white ltc-white link-read-more…-style" href="#" data-toggle-visibility="read-more-toolkit,detail-toolkit" id="read-more-toolkit">Read more…</a><br>
@@ -877,7 +877,7 @@
 <!-- bloc-25 END -->
 
 <!-- bloc-26 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 bgc-dark-pastel-green tc-white d-bloc" id="bloc-26">
+<div class="bloc none bloc-fill-screen bloc-tile-2 bgc-dark-pastel-green tc-white" id="bloc-26">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-bottom">
@@ -909,7 +909,7 @@
 		<div class="row stat-margin">
 			<div class="col-md-4 divider-right stat-title- divider-right-green">
 				<h1 class="mg-md stat-header tc-neon-fuchsia">
-					over 3 years Open Active has reached
+					over 3 years Open Active has reached:
 				</h1>
 			</div>
 			<div class="col-12 divider-right col-lg-4 divider-right-green">
@@ -1029,7 +1029,7 @@
 		<div class="row stat-margin">
 			<div class="col-md-4 stat-title- divider-right-purple">
 				<h1 class="mg-md stat-header tc-capri-2">
-					By 2019 Data Pitch had achieved
+					By 2019 Data Pitch had achieved:
 				</h1>
 			</div>
 			<div class="col-12 col-lg-4 divider-right-purple">
@@ -1089,12 +1089,12 @@
 <div class="bloc full-width-bloc bgc-saffron l-bloc" id="nav-thought-leadership">
 	<div class="container ">
 		<div class="row header-explore-margin">
-			<div class="col-md-6 col-lg-3 align-self-center offset-lg-0">
+			<div class="col-md-6 align-self-center offset-lg-0 col-lg-4">
 				<h1 class="mg-md navigation-header tc-white">
 					thought leadership
 				</h1>
 			</div>
-			<div class="col-md-6 col-lg-3 align-self-center offset-lg-6">
+			<div class="col-md-6 col-lg-3 align-self-center offset-lg-5">
 				<h1 class="mg-md navigation-header text-lg-right tc-white">
 					explore
 				</h1>
@@ -1134,7 +1134,7 @@
 		<div class="row">
 			<div class="col-12 col-lg-10 offset-lg-1">
 				<h1 class="mg-md navigation-header text-lg-center margin-bottom tc-white">
-					PRIVATE SECTOR
+					Private sector
 				</h1>
 				<h1 class="mg-lg tc-white h1-med-comp">
 					We partnered with companies transforming how they work with data
@@ -1143,7 +1143,7 @@
 					We worked with a range of private-sector organisations to help them make better use of data across sectors such as finance, retail and the built environment.<br><br>The ODI Commercial Partnership programme enables us to connect organisations across different sectors, who share a common vision of a collaborative and open future.<br>
 				</p>
 				<h1 class="mg-md navigation-header text-lg-center tc-white margin-top">
-					EXPLORE
+					Explore
 				</h1>
 			</div>
 		</div>
@@ -1214,7 +1214,7 @@
 		<div class="row header-explore-margin">
 			<div class="col-md-6 col-lg-3 align-self-center offset-lg-0">
 				<h1 class="mg-md navigation-header tc-white">
-					COLLABORATION
+					Collaboration
 				</h1>
 			</div>
 			<div class="col-md-6 col-lg-3 align-self-center offset-lg-6">
@@ -1228,7 +1228,7 @@
 <!-- bloc-46 END -->
 
 <!-- bloc-25 -->
-<div class="bloc tc-palatinate-blue bgc-international-orange d-bloc " id="bloc-25">
+<div class="bloc tc-palatinate-blue bgc-international-orange d-bloc" id="bloc-25">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-lg-12">
@@ -1309,7 +1309,7 @@
 		<div class="row align-items-center no-gutters">
 			<div class="col-12 align-self-center col-lg-10 offset-lg-1">
 				<h1 class="mg-md navigation-header text-lg-center tc-palatinate-blue margin-bottom">
-					MEMBERSHIP
+					Membership
 				</h1>
 				<p class="member-text">
 					Our global network contains over 2,000 businesses, startups, data experts and government leaders who are discovering and sharing innovative solutions to accessing, sharing and using data.<br><br>ODI Members are given exclusive invites to ODI networking meetups, events run by other members and the chance to promote their work through blogs and talks. They get discounts on our annual summit and training courses.<br><br>Current ODI Members include Google, Adobe, Capita Group, Doteveryone, the European Space Agency, MoneySuperMarket.com, Ordnance Survey and many, many more.<br>
@@ -1387,28 +1387,42 @@
 </div>
 <!-- bloc-53 END -->
 
+<!-- bloc-62 -->
+<div class="bloc bloc-fill-screen b-parallax bg-49059105103-c2f1f06968-o d-bloc" id="bloc-62">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<h1 class="mg-md h1-heading-1-style text-lg-center tc-white">
+					<strong>Training</strong>
+				</h1>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-62 END -->
+
 <!-- Bloc Group -->
 
 <!-- Bloc Group -->
 <div class="bloc-group">
 
 <!-- bloc-35 -->
-<div class="bloc none bloc-tile-2 bgc-bright-turquoise bloc-fill-screen d-bloc" id="bloc-35">
+<div class="bloc none bloc-fill-screen bgc-platinum l-bloc bloc-tile-2" id="bloc-35">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-lg-12">
-				<h1 class="mg-md training-stat tc-bright-pink">
+				<h1 class="mg-md training-stat tc-palatinate-blue">
 					3,200
 				</h1>
-				<h6 class="mg-md summit-stat-label member-stat-label h6-margin-bottom tc-white">
+				<h6 class="mg-md summit-stat-label member-stat-label h6-margin-bottom tc-black">
 					eLearning
 				</h6>
 			</div>
-			<div class="col-12 col-lg-12 divider-top">
-				<h1 class="mg-md training-stat tc-bright-pink">
+			<div class="col-12 col-lg-12 divider-top-black">
+				<h1 class="mg-md training-stat tc-palatinate-blue">
 					1,000
 				</h1>
-				<h6 class="mg-md summit-stat-label h6-margin-top tc-white">
+				<h6 class="mg-md summit-stat-label h6-margin-top tc-black">
 					Face-to-face<br>
 				</h6>
 			</div>
@@ -1418,12 +1432,12 @@
 <!-- bloc-35 END -->
 
 <!-- bloc-36 -->
-<div class="bloc none bloc-tile-2 bgc-white bloc-fill-screen tc-bright-pink l-bloc" id="bloc-36">
+<div class="bloc none bgc-white bloc-fill-screen bloc-tile-2 tc-palatinate-blue" id="bloc-36">
 	<div class="container">
 		<div class="row align-items-center">
 			<div class="col-12 align-self-center col-lg-10 offset-lg-1">
 				<p class="member-text">
-					In 2019 we trained over 4,250 people, bringing our total lifetime reach to over 28,000 people.<br><br>We also refreshed our Data Skills Framework to reflect new requirements from organisations working with data.<br><br>We offer online, blended and face-to-face courses designed to help people and organisations use data as part of its everyday language.<br>
+					In 2019 we trained&nbsp;<span class="colour-text-black">over 4,250 people</span>&nbsp; bringing our total lifetime reach to over&nbsp;<span class="colour-text-black">28,000</span>&nbsp;people.<br><br>We also refreshed our&nbsp;<span class="colour-text-black text-underline">Data&nbsp;Skills Framework</span>&nbsp;to reflect new requirements from organisations working with data.<br><br>We offer&nbsp;<span class="colour-text-black">online, blended and face-to-face courses</span>&nbsp;designed to help people and organisations use data as part of its everyday language.<br><br><span class="quote-mark-large">“<br></span>DUMMY TEXT FOR A QUOTE ABOUT TRAINING
 				</p>
 			</div>
 		</div>
@@ -1438,7 +1452,7 @@
 	<div class="container ">
 		<div class="row voffset-clear-xs no-gutters">
 			<div class="col-12">
-				<div id="carousel-5626" class="carousel slide" data-ride="carousel" data-interval="2000">
+				<div id="carousel-5626" class="carousel slide" data-ride="carousel" data-interval="false">
 					<ul class="carousel-indicators list-horizontal-layout">
 						<li data-target="#carousel-5626" data-slide-to="0" class="active">
 						</li>
@@ -1527,7 +1541,7 @@
 		<div class="row">
 			<div class="col-12 col-lg-10 offset-lg-1">
 				<h1 class="mg-md navigation-header text-lg-center tc-palatinate-blue margin-bottom">
-					ODI summit
+					ODI Summit
 				</h1>
 				<h1 class="mg-lg h2-feature-title-style tc-palatinate-blue-2">
 					We explored data&rsquo;s impact at the ODI Summit
@@ -1810,7 +1824,7 @@
 		<div class="row stat-margin">
 			<div class="col-md-4 stat-title- divider-right">
 				<h1 class="mg-md stat-header h1-39-style tc-pear">
-					Over the lifetime of ODI, Data as Culture has delivered or commissioned
+					Over the lifetime of ODI, Data as Culture has delivered or commissioned:
 				</h1>
 			</div>
 			<div class="col-12 col-lg-4 divider-right">
@@ -1857,13 +1871,13 @@
 	<div class="container ">
 		<div class="row header-explore-margin">
 			<div class="col-md-6 col-lg-3 align-self-center offset-lg-0">
-				<h1 class="mg-md navigation-header tc-white">
-					financials
+				<h1 class="mg-md tc-white financials-header-text">
+					Financials
 				</h1>
 			</div>
-			<div class="col-md-6 col-lg-3 align-self-center offset-lg-6">
-				<h1 class="mg-md navigation-header text-lg-right tc-white">
-					explore
+			<div class="col-md-6 align-self-center col-lg-6 offset-lg-3">
+				<h1 class="mg-md text-lg-right tc-white financials-header-text">
+					<u>See expanded 2019 figures</u>
 				</h1>
 			</div>
 		</div>
@@ -1901,7 +1915,7 @@
 <div class="bloc-group">
 
 <!-- bloc-77 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 bg-infrastructure-manifesto-RGB-2x l-bloc" id="bloc-77">
+<div class="bloc none bloc-fill-screen bloc-tile-2 bg-equity-20manifesto-20RGB-2x d-bloc" id="bloc-77">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -1912,12 +1926,12 @@
 <!-- bloc-77 END -->
 
 <!-- bloc-78 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 bgc-platinum tc-palatinate-blue-2 l-bloc" id="bloc-78">
+<div class="bloc none bloc-fill-screen bloc-tile-2 bgc-platinum tc-palatinate-blue" id="bloc-78">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 offset-lg-0 order-lg--1 col-lg-12">
-				<p class="mg-clear p-3-style-">
-					<strong>1. Infrastructure<br><br>Sectors and societies must invest in and protect the data infrastructure they rely on. Open data is the foundation of this emerging vital infrastructure.<br></strong><br><u>WHOLE LIST BELOW!!</u>
+				<p class="mg-clear text-manifesto ">
+					<span><strong>1. Infrastructure</strong></span><strong><br></strong><br>Sectors and societies must invest in and protect the data infrastructure they rely on. Open data is the foundation of this emerging vital infrastructure.<br><br><strong>2. Capability<br></strong><br>Everyone must have the opportunity to understand how data can be and is being used. We need data literacy for all, data science skills, and experience using data to help solve problems.<br><br><strong>3. Innovation<br></strong><br>Data must inspire and fuel innovation. It can enable businesses, startups, governments, individuals and communities to create products and services, fuelling economic growth and productivity.<br><br><strong>4. Equity<br></strong><br>Everyone must benefit fairly from data. Access to data and information promotes fair competition and informed markets, and empowers people as consumers, creators and citizens.<br><br><strong>5. Ethics<br></strong><br>People and organisations must use data ethically. The choices made about what data is collected and how it is used should not be unjust, discriminatory or deceptive.<br><br><strong>6. Engagement<br></strong><br>Everyone must be able to take part in making data work for us all. Organisations and communities should collaborate on how data is used and accessed to help solve their problems.<br>
 				</p>
 			</div>
 		</div>
@@ -1932,14 +1946,14 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?9568"></script>
-<script src="./js/bootstrap.bundle.min.js?2640"></script>
-<script src="./js/blocs.min.js?8632"></script>
+<script src="./js/jquery-3.3.1.min.js?9373"></script>
+<script src="./js/bootstrap.bundle.min.js?6837"></script>
+<script src="./js/blocs.min.js?8785"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?9878"></script>
-<script src="./js/textblock.min.js?5072"></script>
-<script src="./js/textbloc-bric-js.js?7355"></script>
-<script src="./js/scrollFX.js?5710"></script>
+<script src="./js/cocoen.min.js?85"></script>
+<script src="./js/textblock.min.js?4163"></script>
+<script src="./js/textbloc-bric-js.js?4069"></script>
+<script src="./js/scrollFX.js?8274"></script>
 <!-- Additional JS END -->
 
 
