--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9708">
-	<link rel="stylesheet" type="text/css" href="style.css?3846">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?8909">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8726">
+	<link rel="stylesheet" type="text/css" href="style.css?7252">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?3855">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -77,7 +77,7 @@
 
 
 <!-- bloc-1 -->
-<div class="bloc full-width-bloc bgc-black d-bloc d-lg-flex   d-none" id="bloc-1">
+<div class="bloc full-width-bloc bgc-black d-bloc d-md-flex  d-none" id="bloc-1">
 	<div class="container ">
 		<div class="row header-explore-margin bgc-black">
 			<div class="col-md-6 align-self-center offset-lg-0 col-lg-6">
@@ -96,7 +96,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-1 -->
-<div class="bloc full-width-bloc bloc-fill-screen bgc-black d-bloc d-lg-flex   d-none" id="bloc-1">
+<div class="bloc full-width-bloc bloc-fill-screen bgc-black d-bloc d-md-flex  d-none" id="bloc-1">
 	<div class="container">
 		<div class="row voffset-lg">
 			<div class="col-lg-10 offset-lg-1 header-image">
@@ -108,7 +108,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-3 -->
-<div class="bloc bgc-black d-bloc" id="bloc-3">
+<div class="bloc bgc-black d-bloc  d-md-none d-flex" id="bloc-3">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col align-self-start bloc-margin-top">
@@ -137,7 +137,7 @@
 <!-- rsa-portrait END -->
 
 <!-- nav-engagement-ethics -->
-<div class="bloc bgc-lavender-pink none full-width-bloc header-explore-margin l-bloc tc-white" id="nav-engagement-ethics">
+<div class="bloc bgc-lavender-pink none full-width-bloc header-explore-margin l-bloc tc-white d-lg-none d-xl-none d-flex" id="nav-engagement-ethics">
 	<div class="container ">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-5 align-self-start">
@@ -185,7 +185,7 @@
 <!-- rsa-landscape END -->
 
 <!-- bloc-10 -->
-<div class="bloc full-width-bloc l-bloc" id="bloc-10">
+<div class="bloc full-width-bloc l-bloc d-lg-flex   d-none" id="bloc-10">
 	<div class="container bloc-sm">
 		<div class="row header-explore-margin">
 			<div class="col align-self-end">
@@ -199,7 +199,7 @@
 <!-- bloc-10 END -->
 
 <!-- bloc-11 -->
-<div class="bloc rsa-bg-type bloc-fill-screen l-bloc" id="bloc-11">
+<div class="bloc rsa-bg-type bloc-fill-screen l-bloc d-lg-flex   d-none" id="bloc-11">
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -210,7 +210,7 @@
 <!-- bloc-11 END -->
 
 <!-- bloc-12 -->
-<div class="bloc full-width-bloc l-bloc" id="bloc-12">
+<div class="bloc full-width-bloc l-bloc d-lg-flex   d-none" id="bloc-12">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col align-self-end header-explore-margin">
@@ -422,8 +422,8 @@
 <div class="bloc bloc-fill-screen full-width-bloc bgc-dodger-blue d-bloc" id="data-sharing-header">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 offset-0">
-				<h1 class="mg-lg text-lg-center hero-header mx-auto d-block tc-white mg-clear-xs">
+			<div class="col-12 offset-0 align-self-center">
+				<h1 class="mg-lg text-lg-center hero-header mx-auto d-block tc-white mg-clear-xs margin-top margin-bottom">
 					We&nbsp;<span class="colour-text-acid">creatively explored</span>&nbsp;different ways of sharing and accessing data
 				</h1>
 			</div>
@@ -578,8 +578,49 @@
 </div>
 <!-- Bloc Group END -->
 
+<!-- Bloc Group -->
+
+<!-- Bloc Group -->
+<div class="bloc-group">
+
+<!-- bloc-28 -->
+<div class="bloc none bgc-rose-bonbon-2 tc-white bloc-tile-2" id="bloc-28">
+	<div class="container bloc-md">
+		<div class="row">
+			<div class="col-12">
+				<h1 class="mg-md tc-white bold-stat-large">
+					4,250
+				</h1>
+				<p class="text-lg-center summit-stat-label">
+					People trained
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-28 END -->
+
+<!-- bloc-29 -->
+<div class="bloc none bgc-international-orange tc-white bloc-tile-2" id="bloc-29">
+	<div class="container bloc-md">
+		<div class="row">
+			<div class="col-12 bold-stat">
+				<h1 class="mg-md tc-white bold-stat-large">
+					20
+				</h1>
+				<p class="text-lg-center summit-stat-label p-style">
+					Countries worked with
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-29 END -->
+</div>
+<!-- Bloc Group END -->
+
 <!-- nav-innovation- -->
-<div class="bloc full-width-bloc bgc-purple-heart d-bloc" id="nav-innovation-">
+<div class="bloc full-width-bloc bgc-purple-heart d-bloc d-lg-flex   d-none" id="nav-innovation-">
 	<div class="container ">
 		<div class="row header-explore-margin">
 			<div class="col-md-6 align-self-center offset-lg-0 col-lg-5">
@@ -621,7 +662,7 @@
 				</h1>
 			</div>
 			<div class="col-lg-12 offset-lg-0">
-				<h1 class="mg-md hero-header tc-dark-pastel-green header-inline-block">
+				<h1 class="mg-md hero-header tc-dark-pastel-green header-inline-block margin-top margin-bottom">
 					We continued our work&nbsp;<span class="colour-text-white header-inline-block">supporting innovation</span>&nbsp;and startups
 				</h1>
 			</div>
@@ -634,6 +675,23 @@
 	</div>
 </div>
 <!-- bloc-30 END -->
+
+<!-- impact-stat -->
+<div class="bloc none tc-white bgc-dodger-blue-2 " id="impact-stat">
+	<div class="container bloc-md">
+		<div class="row">
+			<div class="col-12 bold-stat">
+				<h1 class="mg-md tc-white bold-stat-extra-large">
+					£4.5M
+				</h1>
+				<p class="text-lg-center summit-stat-label p-style">
+					Impact we helped 29 startups achieve
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- impact-stat END -->
 
 <!-- Bloc Group -->
 
@@ -732,7 +790,7 @@
 <div class="bloc-group">
 
 <!-- bloc-25 -->
-<div class="bloc none bgc-purple-heart tc-white bloc-tile-2 d-bloc bloc-fill-screen" id="bloc-25">
+<div class="bloc none bgc-purple-heart tc-white bloc-tile-2 bloc-fill-screen d-bloc" id="bloc-25">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-bottom">
@@ -757,7 +815,7 @@
 <!-- bloc-25 END -->
 
 <!-- bloc-26 -->
-<div class="bloc none data-pitch-bg bloc-tile-2 bgc-black l-bloc bloc-fill-screen" id="bloc-26">
+<div class="bloc none data-pitch-bg bloc-tile-2 bloc-fill-screen l-bloc" id="bloc-26">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -907,7 +965,7 @@
 <!-- financials END -->
 
 <!-- bloc-78 -->
-<div class="bloc bgc-caribbean-green bloc-fill-screen financials-v2 d-bloc d-lg-flex   d-none " id="bloc-78">
+<div class="bloc bgc-caribbean-green bloc-fill-screen financials-v2 d-bloc d-lg-flex   d-none" id="bloc-78">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-3 offset-lg-0 align-self-end">
@@ -944,13 +1002,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?6488"></script>
-<script src="./js/bootstrap.bundle.min.js?5728"></script>
-<script src="./js/blocs.min.js?9881"></script>
+<script src="./js/jquery-3.3.1.min.js?6616"></script>
+<script src="./js/bootstrap.bundle.min.js?2650"></script>
+<script src="./js/blocs.min.js?9664"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?772"></script>
-<script src="./js/textblock.min.js?9133"></script>
-<script src="./js/textbloc-bric-js.js?3998"></script>
+<script src="./js/cocoen.min.js?6888"></script>
+<script src="./js/textblock.min.js?3939"></script>
+<script src="./js/textbloc-bric-js.js?9882"></script>
 <!-- Additional JS END -->
 
 
