--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9739">
-	<link rel="stylesheet" type="text/css" href="style.css?3789">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?8321">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6567">
+	<link rel="stylesheet" type="text/css" href="style.css?4326">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?2229">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -108,13 +108,14 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-3 -->
-<div class="bloc bgc-black    d-none d-bloc" id="bloc-3">
+<div class="bloc bgc-black d-bloc d-lg-none d-xl-none d-flex " id="bloc-3">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col align-self-start bloc-margin-top">
-				<h3 class="mg-md navigation-header-intro tc-white text-center margin-bottom">
+				<img src="img/lazyload-ph.png" data-src="img/ODI%202019%20AR%20Cover%20-%20Mobile%20dev01-01.svg" class="img-fluid mx-auto d-block lazyload" alt="ODI%202019%20AR%20Cover%20 %20Mobile%20dev01-01" />
+				<h3 class="mg-md navigation-header-intro tc-white text-center margin-top">
 					OPEN DATA INSTITUTE
-				</h3><img src="img/lazyload-ph.png" data-src="img/ODI%202019%20AR%20Cover%20-%20Mobile%20dev01-01.svg" class="img-fluid mx-auto d-block lazyload" alt="ODI%202019%20AR%20Cover%20 %20Mobile%20dev01-01" />
+				</h3>
 				<h3 class="mg-md navigation-header-intro tc-white text-center margin-top">
 					2019 HIGHLIGHTS
 				</h3>
@@ -257,7 +258,7 @@
 <!-- bloc-10 END -->
 
 <!-- bloc-15 -->
-<div class="bloc d-lg-none d-xl-none d-flex image-bloc-mobile bg-RSA d-bloc" id="bloc-15">
+<div class="bloc d-lg-none d-xl-none d-flex image-bloc-mobile bg-49059621536-a8949d263c-o d-bloc" id="bloc-15">
 	<div class="container ">
 		<div class="row">
 			<div class="col-12">
@@ -659,7 +660,7 @@
 <!-- Bloc Group END -->
 
 <!-- bloc-34 -->
-<div class="bloc none bloc-fill-screen dam-map-bg d-lg-flex   d-none l-bloc " id="bloc-34">
+<div class="bloc none bloc-fill-screen dam-map-bg d-lg-flex   d-none l-bloc" id="bloc-34">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -1488,13 +1489,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?3345"></script>
-<script src="./js/bootstrap.bundle.min.js?1971"></script>
-<script src="./js/blocs.min.js?8432"></script>
+<script src="./js/jquery-3.3.1.min.js?8024"></script>
+<script src="./js/bootstrap.bundle.min.js?6661"></script>
+<script src="./js/blocs.min.js?1766"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?9807"></script>
-<script src="./js/textblock.min.js?9292"></script>
-<script src="./js/textbloc-bric-js.js?7312"></script>
+<script src="./js/cocoen.min.js?8476"></script>
+<script src="./js/textblock.min.js?5015"></script>
+<script src="./js/textbloc-bric-js.js?9551"></script>
 <!-- Additional JS END -->
 
 
