PUBLISHED VERSION MVP

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="favicon.png?9059">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6567">
-	<link rel="stylesheet" type="text/css" href="style.css?4326">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?2229">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?688">
+	<link rel="stylesheet" type="text/css" href="style.css?8397">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?1038">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -108,11 +108,11 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-3 -->
-<div class="bloc bgc-black d-bloc d-lg-none d-xl-none d-flex " id="bloc-3">
+<div class="bloc bgc-black d-bloc d-lg-none d-xl-none d-flex" id="bloc-3">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col align-self-start bloc-margin-top">
-				<img src="img/lazyload-ph.png" data-src="img/ODI%202019%20AR%20Cover%20-%20Mobile%20dev01-01.svg" class="img-fluid mx-auto d-block lazyload" alt="ODI%202019%20AR%20Cover%20 %20Mobile%20dev01-01" />
+				<img src="img/lazyload-ph.png" data-src="img/ODI%202019%20AR%20Cover%20-%20Mobile%20dev01-01.svg" class="img-fluid mx-auto mg-lg d-lg-none d-xl-none d-block padding-imapct lazyload" alt="ODI%202019%20AR%20Cover%20 %20Mobile%20dev01-01" />
 				<h3 class="mg-md navigation-header-intro tc-white text-center margin-top">
 					OPEN DATA INSTITUTE
 				</h3>
@@ -137,29 +137,44 @@
 </div>
 <!-- rsa-portrait END -->
 
-<!-- bloc-5 -->
-<div class="bloc full-width-bloc l-bloc" id="bloc-5">
+<!-- nav-engagement-ethics -->
+<div class="bloc none full-width-bloc header-explore-margin d-lg-none d-xl-none d-flex bgc-white tc-black l-bloc" id="nav-engagement-ethics">
 	<div class="container ">
-		<div class="row no-gutters">
-			<div class="col">
-				<div class="embed-responsive embed-responsive-16by9 d-lg-none d-xl-none d-block">
-					<iframe class="embed-responsive-item lazyload" src="img/lazyload-ph.png" data-src="https://player.vimeo.com/video/360486264?title=0&amp;byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-					</iframe>
-				</div>
+		<div class="row voffset-md-xs">
+			<div class="col-md-6 offset-lg-0 col-lg-5 align-self-start">
+				<h1 class="mg-md navigation-header text-center margin-bottom tc-black">
+					VIEW FROM THE CEO
+				</h1>
+			</div>
+			<div class="offset-md-1 offset-sm-1 col-sm-10 align-self-center offset-lg-1 col-lg-4 col-md-10 offset-0 col-12">
+				<h2 class="btn-resize-mode d-block text-md-center text-sm-center mg-lg margin-bottom text-left h2-style tc-palatinate-blue">
+					<strong>Dear partners, supporters, friends, colleagues…</strong><br>
+				</h2>
+			</div>
+			<div class="col-md-6 col-lg-3 align-self-center offset-lg-4 col-12 margin-bottom">
+				<p class="mg-clear p-3-style- d-block">
+					In 2019, we focused on how to make the way data is opened and shared fairer and more trustworthy. We explored this through a range of projects, things like: piloting data trusts to&nbsp;<span class="span-bold colour-text-blue">help people share data in more trustworthy ways</span>&nbsp; creating a toolkit to help the public sector build services involving data, and helping companies develop their&nbsp;<span class="span-bold colour-text-blue">data ethics practice and capability.</span><br><br>With our partners and clients, we worked on data across sectors including health and physical activity, engineering, agriculture and banking. And we didn&rsquo;t just do this in the UK: in 2019 our work has taken us to places like&nbsp;<span class="span-bold colour-text-blue">India, Ethiopia, the US, and across Europe.</span><br><br>We trained more than&nbsp;<span class="span-bold colour-text-blue">4,000 people</span>&nbsp;and reached over&nbsp;<span class="span-bold colour-text-blue">800k people</span>&nbsp;through our events and blog posts. We helped data startups realise almost&nbsp;<span class="span-bold colour-text-blue">£17m of impact</span>&nbsp;and investment, and create over 100 new jobs.<br><br>We couldn&rsquo;t have done this without support from&nbsp;<span class="span-bold colour-text-blue">Luminate</span>&nbsp; R&amp;D funding from&nbsp;<span class="span-bold colour-text-blue">Innovate UK</span>&nbsp; and support from our partners and members.<br>
+				</p>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-5 END -->
+<!-- nav-engagement-ethics END -->
 
-<!-- nav-engagement-ethics -->
-<div class="bloc none full-width-bloc header-explore-margin d-lg-none d-xl-none d-flex bgc-white tc-black l-bloc" id="nav-engagement-ethics">
+<!-- bloc-7 -->
+<div class="bloc none full-width-bloc header-explore-margin d-lg-none d-xl-none d-flex tc-black bgc-lavender-pink l-bloc" id="bloc-7">
 	<div class="container ">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-5 align-self-start">
 				<h1 class="mg-md navigation-header text-center margin-bottom tc-black">
 					engagement and ethics
 				</h1>
+			</div>
+			<div class="col margin-top margin-bottom ">
+				<div class="embed-responsive embed-responsive-16by9 d-lg-none d-xl-none d-block">
+					<iframe class="embed-responsive-item lazyload" src="img/lazyload-ph.png" data-src="https://player.vimeo.com/video/360486264?title=0&amp;byline=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+					</iframe>
+				</div>
 			</div>
 			<div class="offset-md-1 offset-sm-1 col-sm-10 align-self-center offset-lg-1 col-lg-4 col-md-10 offset-0 col-12">
 				<h2 class="btn-resize-mode d-block text-md-center text-sm-center mg-lg h1-med-comp margin-bottom text-left tc-black">
@@ -179,7 +194,7 @@
 		</div>
 	</div>
 </div>
-<!-- nav-engagement-ethics END -->
+<!-- bloc-7 END -->
 
 <!-- bloc-7 -->
 <div class="bloc bgc-lavender-pink none full-width-bloc header-explore-margin tc-white    d-none l-bloc" id="bloc-7">
@@ -258,37 +273,15 @@
 <!-- bloc-10 END -->
 
 <!-- bloc-15 -->
-<div class="bloc d-lg-none d-xl-none d-flex image-bloc-mobile bg-49059621536-a8949d263c-o d-bloc" id="bloc-15">
-	<div class="container ">
-		<div class="row">
+<div class="bloc d-lg-none d-xl-none d-flex image-bloc-mobile bg-RSA d-bloc" id="bloc-15">
+	<div class="container bloc-lg">
+		<div class="row voffset-xs">
 			<div class="col-12">
 			</div>
 		</div>
 	</div>
 </div>
 <!-- bloc-15 END -->
-
-<!-- bloc-11 -->
-<div class="bloc rsa-bg-type bloc-fill-screen d-lg-flex   d-none l-bloc" id="bloc-11">
-	<div class="container">
-		<div class="row">
-			<div class="col d-lg-block   d-none">
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-11 END -->
-
-<!-- bloc-12 -->
-<div class="bloc d-lg-none d-xl-none d-flex bg-RSA-20typographic d-bloc image-bloc-mobile" id="bloc-12">
-	<div class="container ">
-		<div class="row">
-			<div class="col d-lg-none d-xl-none d-block">
-			</div>
-		</div>
-	</div>
-</div>
-<!-- bloc-12 END -->
 
 <!-- bloc-12 -->
 <div class="bloc full-width-bloc l-bloc" id="bloc-12">
@@ -303,6 +296,17 @@
 	</div>
 </div>
 <!-- bloc-12 END -->
+
+<!-- bloc-11 -->
+<div class="bloc rsa-bg-type bloc-fill-screen d-lg-flex   d-none l-bloc" id="bloc-11">
+	<div class="container">
+		<div class="row">
+			<div class="col d-lg-block   d-none">
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-11 END -->
 
 <!-- bloc-13 -->
 <div class="bloc d-lg-none d-xl-none d-flex bg-ODI-Data--26-Public-Services-Toolkit-1 d-bloc image-bloc-mobile" id="bloc-13">
@@ -563,7 +567,7 @@
 <!-- data-sharing-header END -->
 
 <!-- bloc-24 -->
-<div class="bloc full-width-bloc bgc-black d-bloc d-lg-none d-xl-none d-flex" id="bloc-24">
+<div class="bloc full-width-bloc bgc-black d-bloc d-lg-none d-xl-none d-flex margin-bottom" id="bloc-24">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-12 offset-0 align-self-center">
@@ -575,6 +579,20 @@
 	</div>
 </div>
 <!-- bloc-24 END -->
+
+<!-- bloc-31 -->
+<div class="bloc full-width-bloc bgc-black d-bloc d-lg-none d-xl-none d-flex margin-bottom" id="bloc-31">
+	<div class="container bloc-md">
+		<div class="row">
+			<div class="col-12 offset-0 align-self-center">
+				<h1 class="mg-lg text-lg-center hero-header mx-auto d-block tc-white mg-clear-xs margin-top margin-bottom">
+					We&nbsp;<span class="colour-text-blue">creatively explored</span>&nbsp;different ways of sharing and accessing data
+				</h1>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-31 END -->
 
 <!-- bloc-26 -->
 <div class="bloc bg-49059621536-a8949d263c-o d-bloc image-bloc-mobile d-lg-none d-xl-none d-flex" id="bloc-26">
@@ -972,8 +990,8 @@
 <!-- impact-stat END -->
 
 <!-- bloc-41 -->
-<div class="bloc none bloc-fill-screen bgc-palatinate-blue-2 d-bloc tc-white" id="bloc-41">
-	<div class="container">
+<div class="bloc none bgc-palatinate-blue-2 d-bloc tc-white d-lg-none d-xl-none d-flex" id="bloc-41">
+	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-bottom">
 				<h1 class="mg-md navigation-header text-lg-center text-center tc-white">
@@ -1208,41 +1226,41 @@
 	<div class="container bloc-lg">
 		<div class="row stat-margin">
 			<div class="col-md-4 stat-title- divider-right-purple">
-				<h1 class="mg-md stat-header tc-capri text-center">
+				<h1 class="mg-md stat-header text-center tc-palatinate-blue">
 					By 2019 Data Pitch had achieved:
 				</h1>
 			</div>
 			<div class="col-12 col-lg-4 divider-right-purple">
-				<h1 class="mg-md member-stat h1-14-style animated zoomIn none tc-capri" data-appear-anim-style="zoomIn">
+				<h1 class="mg-md member-stat h1-14-style animated zoomIn none tc-palatinate-blue" data-appear-anim-style="zoomIn">
 					47
 				</h1>
-				<h6 class="mg-md h6-margin-bottom summit-stat-label tc-purple-heart">
+				<h6 class="mg-md h6-margin-bottom summit-stat-label tc-black">
 					Companies in two rounds of applications<br>
 				</h6>
 			</div>
 			<div class="col-12 col-lg-4">
-				<h1 class="mg-md member-stat h1-14-style animated zoomIn animDelay02 tc-capri" data-appear-anim-style="zoomIn">
+				<h1 class="mg-md member-stat h1-14-style animated zoomIn animDelay02 tc-palatinate-blue" data-appear-anim-style="zoomIn">
 					13
 				</h1>
-				<h6 class="mg-md summit-stat-label h6-margin-bottom tc-purple-heart">
+				<h6 class="mg-md summit-stat-label h6-margin-bottom tc-black">
 					Accelerated companies drawn from 13 countries<br>
 				</h6>
 			</div>
 		</div>
 		<div class="row padding-top divider-top-purple row-bloc-27-margin-top">
 			<div class="col-12 col-lg-5 divider-right-purple">
-				<h1 class="mg-md member-stat h1-14-style animated zoomIn animDelay04 tc-capri" data-appear-anim-style="zoomIn">
+				<h1 class="mg-md member-stat h1-14-style animated zoomIn animDelay04 tc-palatinate-blue" data-appear-anim-style="zoomIn">
 					112
 				</h1>
-				<h6 class="mg-md summit-stat-label h6-margin-bottom tc-purple-heart">
+				<h6 class="mg-md summit-stat-label h6-margin-bottom tc-black">
 					Additional jobs created <br>by Data Pitch startups and SMEs<br>
 				</h6>
 			</div>
 			<div class="col-12 col-lg-7">
-				<h1 class="mg-md member-stat h1-14-style animated zoomIn animDelay06 tc-capri" data-appear-anim-style="zoomIn">
+				<h1 class="mg-md member-stat h1-14-style animated zoomIn animDelay06 tc-palatinate-blue" data-appear-anim-style="zoomIn">
 					€22.4m
 				</h1>
-				<h6 class="mg-md summit-stat-label h6-margin-bottom tc-purple-heart">
+				<h6 class="mg-md summit-stat-label h6-margin-bottom tc-black">
 					In measured impact, including total amount of sales, investments and efficiencies unlocked by accelerated companies<br>
 				</h6>
 			</div>
@@ -1489,13 +1507,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?8024"></script>
-<script src="./js/bootstrap.bundle.min.js?6661"></script>
-<script src="./js/blocs.min.js?1766"></script>
+<script src="./js/jquery-3.3.1.min.js?3854"></script>
+<script src="./js/bootstrap.bundle.min.js?104"></script>
+<script src="./js/blocs.min.js?1517"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?8476"></script>
-<script src="./js/textblock.min.js?5015"></script>
-<script src="./js/textbloc-bric-js.js?9551"></script>
+<script src="./js/cocoen.min.js?7540"></script>
+<script src="./js/textblock.min.js?2050"></script>
+<script src="./js/textbloc-bric-js.js?7059"></script>
 <!-- Additional JS END -->
 
 
